# fishregression

./: Dockerfile  pyproject.toml
model/: manager.py
note/: LinearRegression.ipynb  regression.ipynb
src/fishregression/: .cli.py.swp  cli.py  main.py  manager.py
src/fishregression/model/: manager.py
